[tool.poetry]
name = "annature"
version = "0.1.0"
description = "Python idiomatic client for Annature"
authors = ["Anomaly Software <code@anomaly.ltd>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.1"
httpx = "^0.24.1"
pydantic = "^2.3.0"
coverage = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
